--- a/lego-app/src/index.css
+++ b/lego-app/src/index.css
@@ -1,5 +1,19 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
+.App-header {
+  background-color: #76BED0;
+  height: 150px;
+  padding: 20px;
+  color: white; }
+
+.navbar-profile-pic {
+  width: 25px;
+  margin-top: -4px;
+  margin-right: 3px; }
+
+.navbar-fixed-top {
+  height: 42px;
+  background-color: rgba(135, 135, 135, 0.25); }
+
+.btn-login {
+  margin-top: 8px; }
+
+/*# sourceMappingURL=index.css.map */
