--- a/lego-app/src/index.scss
+++ b/lego-app/src/index.scss
@@ -44,6 +44,12 @@ body {
   margin-top: 13px;
 }
 
+.lego-logo {
+  width: 38px;
+  margin-top: -5px;
+  margin-left: -50px;
+}
+
 a .dropdown-toggle {
   color: $secondary-color;
 }
@@ -185,9 +191,9 @@ a .dropdown-toggle {
   text-decoration: none;
 }
 
-i {
+.fa-pencil {
   color: white;
-  margin-top: -3px;
+margin-top: -3px;
 }
 
 // card css ends
@@ -315,4 +321,10 @@ form p {
       border: 1px solid #ccc;
       transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 
+}
+
+pre {
+  text-align: left;
+  color: green;
+    background: black;
 }
