--- a/lego-app/src/index.css
+++ b/lego-app/src/index.css
@@ -6,7 +6,8 @@ body {
 
 .App h2 {
   padding-top: 55px;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  text-align: center; }
 
 .App-header {
   background-color: white;
@@ -39,6 +40,9 @@ a .dropdown-toggle {
 .btn-login {
   margin-top: 8px; }
 
+.card-area {
+  margin-bottom: 17px; }
+
 .card {
   position: relative;
   z-index: 1;
@@ -54,20 +58,20 @@ a .dropdown-toggle {
   -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3); }
 
-.card:hover .thumbnail img,
-.hover .thumbnail img {
-  transform: scale(1.1);
-  opacity: .6; }
-
 .card .thumbnail {
   background: #000000;
   height: 350px;
   overflow: hidden;
   padding: 0; }
-  .card .thumbnail .preview {
-    width: 380px;
-    border: 0;
-    height: 350px; }
+
+.preview {
+  width: 380px;
+  border: 0;
+  height: 350px; }
+
+.preview:hover {
+  transform: scale(1.1);
+  opacity: .6; }
 
 .card .thumbnail .edit-circle {
   position: absolute;
@@ -95,6 +99,9 @@ a .dropdown-toggle {
   width: 120%;
   transition: all 0.3s linear 0s; }
 
+h1 .title {
+  text-align: center; }
+
 .card .post-content {
   position: absolute;
   bottom: 0;
@@ -120,16 +127,27 @@ a .dropdown-toggle {
   margin: 0;
   padding: 0 0 10px;
   color: #222 !important;
-  font-size: 24px !important;
+  font-size: 22px !important;
   font-weight: 700;
-  margin: 40px 0 0 !important; }
+  margin: 40px 0 0 !important;
+  text-align: left; }
 
-.card .post-content .sub_title {
+.card .post-content .post-description {
   margin: 0;
   padding: 0 0 20px;
   color: #f2b202;
   font-size: 17px;
-  font-weight: 400; }
+  font-weight: 400;
+  text-overflow: ellipsis;
+  text-align: left; }
+
+.post-description {
+  display: block;
+  width: 320px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #f2b202; }
 
 .card .post-content .post-meta {
   margin: 0px 0px 10px;
@@ -273,7 +291,19 @@ form p {
   position: relative; }
 
 .lego-title {
-  margin-top: 80px; }
+  margin-top: 80px;
+  text-align: left;
+  color: #878e88; }
+
+.lego-type {
+  text-align: left;
+  color: #878e88;
+  font-size: 1.1em; }
+
+.lego-language {
+  color: #f7cb15;
+  text-align: left;
+  font-size: 1.1em; }
 
 .selectpicker {
   height: 34px;
@@ -286,5 +316,20 @@ pre {
   text-align: left;
   color: green;
   background: black; }
+
+.homepage {
+  background-color: #f7cb15;
+  max-width: 1450px;
+  height: 770px; }
+
+.home-logo {
+  margin-top: 180px; }
+
+.tagline {
+  margin-top: 30px;
+  color: white;
+  font-family: "Lato", sans-serif;
+  font-weight: 600;
+  font-size: 3em; }
 
 /*# sourceMappingURL=index.css.map */
