--- a/lego-app/src/index.scss
+++ b/lego-app/src/index.scss
@@ -17,6 +17,7 @@ body {
 .App h2 {
   padding-top: 55px;
   padding-bottom: 20px;
+  text-align: center;
 
 }
 .App-header {
@@ -59,6 +60,11 @@ a .dropdown-toggle {
 }
 
 // card css begins
+
+.card-area {
+  margin-bottom: 17px;
+}
+
 .card {
   position: relative;
   z-index: 1;
@@ -76,23 +82,27 @@ a .dropdown-toggle {
   -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
 }
-.card:hover .thumbnail img,
-.hover .thumbnail img {
-  transform: scale(1.1);
-  opacity: .6;
-}
+
 .card .thumbnail {
   background: #000000;
   height: 350px;
   overflow: hidden;padding: 0;
 
-  .preview {
-
-    width: 380px;
-    border: 0;
-    height: 350px;
-  }
 }
+
+.preview {
+  width: 380px;
+  border: 0;
+  height: 350px;
+}
+
+.preview:hover {
+  transform: scale(1.1);
+  opacity: .6;
+
+
+}
+
 .card .thumbnail .edit-circle {
   position: absolute;
   top: 20px;
@@ -119,6 +129,10 @@ a .dropdown-toggle {
   width: 120%;
   transition: all 0.3s linear 0s;
 }
+
+h1 .title {
+  text-align: center;
+}
 .card .post-content {
   position: absolute;
   bottom: 0;
@@ -144,16 +158,27 @@ a .dropdown-toggle {
   margin: 0;
   padding: 0 0 10px;
   color: #222 !important;
-  font-size: 24px !important;
+  font-size: 22px !important;
   font-weight: 700;    margin: 40px 0 0 !important;
+  text-align: left;
 }
-.card .post-content .sub_title {
+.card .post-content .post-description {
   margin: 0;
   padding: 0 0 20px;
   color: #f2b202;
   font-size: 17px;
   font-weight: 400;
+  text-overflow: ellipsis;
+text-align: left;
+}
 
+.post-description {
+  display:block; width: 320px;
+   white-space: nowrap;
+   overflow: hidden;
+
+  text-overflow: ellipsis;
+  color: #f2b202;
 }
 
 .card .post-content .post-meta {
@@ -338,6 +363,23 @@ form p {
 
 .lego-title {
   margin-top: 80px;
+  text-align: left;
+  color: $dark-color
+}
+
+.type-language {
+
+}
+.lego-type {
+  text-align: left;
+  color: $dark-color;
+  font-size: 1.1em;
+}
+
+.lego-language {
+  color: $docor-color;
+  text-align: left;
+  font-size: 1.1em;
 }
 
 .selectpicker {
@@ -353,4 +395,24 @@ pre {
   text-align: left;
   color: green;
     background: black;
+}
+
+.homepage {
+ background-color: $docor-color;
+
+ max-width: 1450px;
+ height: 770px;
+
+}
+
+.home-logo {
+  margin-top: 180px;
+}
+
+.tagline {
+  margin-top: 30px;
+  color: white;
+  font-family: $primary-font;
+  font-weight: 600;
+  font-size: 3em;
 }
