--- a/lego-app/src/index.css
+++ b/lego-app/src/index.css
@@ -51,8 +51,7 @@ a .dropdown-toggle {
   position: relative;
   z-index: 1;
   background: #FFFFFF;
-  min-width: 270px;
-  max-width: 380px;
+  width: 100%;
   height: 350px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
   display: inline-block; }
@@ -147,7 +146,7 @@ h1 .title {
 
 .post-description {
   display: block;
-  width: 320px;
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -193,7 +192,7 @@ h1 .title {
   color: #000000;
   text-decoration: none; }
 
-.fa-pencil {
+.fa-eye {
   color: white;
   margin-top: -3px; }
 
