--- a/lego-app/src/index.css
+++ b/lego-app/src/index.css
@@ -6,8 +6,17 @@ body {
 
 .App h2 {
   padding-top: 55px;
-  padding-bottom: 20px;
-  text-align: center; }
+  text-align: left;
+  font-family: "Lato", sans-serif;
+  font-weight: 800;
+  margin-left: 6%; }
+
+hr {
+  border-width: 2px;
+  border-color: #76BED0;
+  width: 90%;
+  padding-bottom: 6px;
+  margin-top: 14px; }
 
 .App-header {
   background-color: white;
@@ -74,7 +83,8 @@ a .dropdown-toggle {
 
 .preview:hover {
   transform: scale(1.1);
-  opacity: .6; }
+  opacity: .6;
+  text-decoration: underline black; }
 
 .card .thumbnail .edit-circle {
   position: absolute;
